--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <script type="text/javascript" src="http://192.168.99.100:6001/socket.io/socket.io.js"></script>
+
 </head>
 <body>
   <app-root></app-root>
